fixed available to minimum, always visible footer on listing page
Former-commit-id: 1279c73a5ef0694168bea88cb9b14b231dffeaef
Former-commit-id: 5767fbca435ee50771f722ffcaa7085be12d41a2

--- a/server/public/sass/prod_listing/listing_page.scss
+++ b/server/public/sass/prod_listing/listing_page.scss
@@ -32,7 +32,7 @@
 }
 
 .min-height {
-  min-height: 100vh;
+  min-height: calc(100vh - 110px);
 }
 
 #listed-page {
@@ -40,7 +40,7 @@
   background-attachment: fixed;
   background-color: $white;
   background-color: $white;
-  min-height: 100vh;
+  min-height: calc(100vh - 110px);
   width: 100%;
   &.is-active {
     @include translate(500px,0);
